gccida/c3/expand_builtin_ffs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_ffs/src/builtins.c:3781:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( *( _WORD *)( *( _QWORD *)( arglist->int_cst.int_cst.low + 8) + 60LL)) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_ffs/src/obj/builtins.o] Error 1
